change few styles and change scrollbar style and add a footer section for todo list

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@
 * {
   font-family: "League Spartan", sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
